--- a/server/package.json
+++ b/server/package.json
@@ -7,16 +7,21 @@
     "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.1",
     "morgan": "~1.9.1",
+    "nodemon": "^3.1.0",
     "pug": "^3.0.2"
   },
   "main": "app.js",
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "description": ""
 }
