--- a/compose.yaml
+++ b/compose.yaml
@@ -18,7 +18,7 @@ services:
     stdin_open: true
     volumes:
       - ./client:/usr/src/app
-      - /usr/src/app/node_modules
+      # - /usr/src/app/node_modules
     restart: always
     # networks:
       # - react-express
@@ -32,11 +32,16 @@ services:
       NODE_ENV: production
     ports:
       - 3000:3000
+    links:
+      - mongo
     # volumes:
-    #   - ./api:/app      
-    #   - ./app/node_modules
+    #   - ./server:/app
+      # - ./app/node_modules
   mongo:
+    container_name: mongo
     image: mongo
+    volumes:
+      - ./database:/database/chronos
     ports:
       - "27017:27017"
 
