--- a/server/package.json
+++ b/server/package.json
@@ -8,20 +8,23 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "uuid": "^9.0.1"
   },
   "main": "app.js",
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "description": ""
+  "description": "Chronos is a service that helps organize meetings, tasks for the day/month/year, and events. This is server part of chronos"
 }
