--- a/client/package.json
+++ b/client/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "calendar-client",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^13.5.0",
+    "moment": "^2.29.3",
+    "react": "^18.1.0",
+    "react-big-calendar": "^0.40.1",
+    "react-datetime-picker": "^3.5.0",
+    "react-dom": "^18.1.0",
+    "react-modal": "^3.15.1",
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^3.5.2"
+    "sweetalert2": "^11.4.14",
+    "validator": "^13.7.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=4000 react-scripts start",
-    "build": "PORT=4000 react-scripts build",
-    "test": "PORT=4000 react-scripts test",
-    "eject": "PORT=4000 react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
