--- a/server/package.json
+++ b/server/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "server",
-  "version": "0.0.0",
-  "private": true,
+  "name": "calendar",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "express-validator": "^7.0.1",
-    "http-errors": "~1.6.3",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.1",
-    "morgan": "~1.9.1",
-    "nodemon": "^3.1.0",
-    "pug": "^3.0.2",
-    "uuid": "^9.0.1"
-  },
-  "main": "app.js",
   "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "description": "Chronos is a service that helps organize meetings, tasks for the day/month/year, and events. This is server part of chronos"
+  "author": "m",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-validator": "^6.14.0",
+    "isdayoff": "^1.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
+    "mongoose": "^6.3.3",
+    "uuid": "^9.0.1"
+  }
 }
